# ogl

./: .clang-format  CMakeLists.txt
res/shaders/: base_frag.glsl  vertex.glsl
src/: CMakeLists.txt  bootstrap.cpp  main.cpp  sandbox.cpp  settings.hpp
src/core/: camera.hpp  deleteme.cpp  engine.cpp  engine.hpp  input.hpp  mesh.hpp  model.hpp  screen.hpp  shader.hpp  time.hpp  window.hpp
src/core/detail/: _glfw.hpp  _glfw_input.cpp  _glfw_input.hpp  _glfw_window.cpp  _glfw_window.hpp
src/graphics/: light.hpp  mesh.hpp  model.hpp  shader.hpp
src/models/: cube.cpp
src/screen/: main_screen.cpp  main_screen.hpp
src/utils/: resource.hpp
